--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h2>
     <div class="b">
         <p>
-            diawmdiadiwoandps
+            diawmdiadiwoandp
         </p>
         <p>
             qualquer outra coisa
