--- a/index.html
+++ b/index.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="utf-8"/>
-    <title>HTML5 – Estrutura básica</title>
-    <style>
-        #a{color:blue;}
-        .b{color:blueviolet;}
-    </style>
-</head>
-<body>
-    <h2 id="a">
-        fichaRPG
-    </h2>
-    <h2 class="b">
-        fichaRPG
-    </h2>
-    <div class="b">
-        <p>
-            diawmdiadiwoandp
-        </p>
-        <p>
-            qualquer outra coisa
-        </p>
-    </div>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Ficha RPG</title>
+        <link rel="stylesheet" href="./style.css" />
+    </head>
+    <body>
+        <div class="container">
+            <!-- Mochila/Mapa -->
+            <div>
+                <h1>Mochila</h1>
+            </div>
+
+            <!-- Inventário -->
+            <div class="backpack">
+                <div class="item">
+                    <img src="./icons/MAchetes.png" alt="machete" />
+                    <p>Machete</p>
+                </div>
+                <div class="item">
+                    <img src="./icons/Revolver_.32.png" alt="machete" />
+                    <p>Revolver</p>
+                </div>
+                <div class="item">
+                    <img
+                        src="./icons/Rifle_de_acao_por_ferrolho_.png"
+                        alt="machete"
+                    />
+                    <p>Rifle de Ação</p>
+                </div>
+                <div class="item">
+                    <img src="./icons/MAchetes.png" alt="machete" />
+                    <p>Machete</p>
+                </div>
+                <div class="item">
+                    <img src="./icons/MAchetes.png" alt="machete" />
+                    <p>Machete</p>
+                </div>
+                <div class="item">
+                    <img src="./icons/MAchetes.png" alt="machete" />
+                    <p>Machete</p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
