--- a/index.html
+++ b/index.html
@@ -15,31 +15,30 @@
             <!-- Inventário -->
             <div class="backpack">
                 <div class="item">
-                    <img src="./icons/MAchetes.png" alt="machete" />
-                    <p>Machete</p>
+                    <img src="./icons/Arco.png" alt="arco e flecha" />
+                    <p>Arco e flecha</p>
                 </div>
                 <div class="item">
-                    <img src="./icons/Revolver_.32.png" alt="machete" />
+                    <img src="./icons/Revolver_.32.png" alt="Revolver" />
                     <p>Revolver</p>
                 </div>
                 <div class="item">
-                    <img
-                        src="./icons/Rifle_de_acao_por_ferrolho_.png"
-                        alt="machete"
+                    <img src="./icons/Serra.png"
+                        alt="Serra"
                     />
-                    <p>Rifle de Ação</p>
+                    <p>Serra</p>
                 </div>
                 <div class="item">
-                    <img src="./icons/MAchetes.png" alt="machete" />
-                    <p>Machete</p>
+                    <img src="./icons/caderno.png" alt="Lanterna" />
+                    <p>Lanterna</p>
                 </div>
                 <div class="item">
-                    <img src="./icons/MAchetes.png" alt="machete" />
-                    <p>Machete</p>
+                    <img src="./icons/Bola.png" alt="Bola" />
+                    <p>Bola</p>
                 </div>
                 <div class="item">
-                    <img src="./icons/MAchetes.png" alt="machete" />
-                    <p>Machete</p>
+                    <img src="./icons/Bala de pistola.png" alt="Bala de pistola" />
+                    <p>Bala de pistola</p>
                 </div>
             </div>
         </div>
