--- a/index.html
+++ b/index.html
@@ -3,44 +3,37 @@
     <head>
         <meta charset="utf-8" />
         <title>Ficha RPG</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css"
+        />
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <div class="container">
-            <!-- Mochila/Mapa -->
-            <div>
-                <h1>Mochila</h1>
-            </div>
+        <div class="container is-fluid">
+            <div class="columns">
+                <!-- Mochila/Mapa -->
+                <div class="column">
+                    <h1 class="title is-1 has-text-light has-text-centered">
+                        Ficha
+                    </h1>
+                </div>
 
-            <!-- Inventário -->
-            <div class="backpack">
-                <div class="item">
-                    <img src="./icons/Arco.png" alt="arco e flecha" />
-                    <p>Arco e flecha</p>
-                </div>
-                <div class="item">
-                    <img src="./icons/Revolver_.32.png" alt="Revolver" />
-                    <p>Revolver</p>
-                </div>
-                <div class="item">
-                    <img src="./icons/Serra.png"
-                        alt="Serra"
-                    />
-                    <p>Serra</p>
-                </div>
-                <div class="item">
-                    <img src="./icons/caderno.png" alt="Lanterna" />
-                    <p>Lanterna</p>
-                </div>
-                <div class="item">
-                    <img src="./icons/Bola.png" alt="Bola" />
-                    <p>Bola</p>
-                </div>
-                <div class="item">
-                    <img src="./icons/Bala de pistola.png" alt="Bala de pistola" />
-                    <p>Bala de pistola</p>
+                <!-- Inventário -->
+                <div class="column">
+                    <h1 class="title is-1 has-text-light has-text-centered">
+                        Inventário
+                    </h1>
+                    <div class="select is-rounded">
+                        <select id="item-list"> </select>
+                    </div>
+                    <button id="btn-add-item" class="button is-rounded">
+                        Adicionar
+                    </button>
+                    <div id="rpg-backpack"></div>
                 </div>
             </div>
         </div>
     </body>
+    <script src="./app.js"></script>
 </html>
